--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- <link rel="stylesheet" href="./assets/style.css" /> -->
 
-    <title>Document</title>
+    <title>Custom Modern Sliders</title>
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -211,6 +211,18 @@
         transform: scale(1.03);
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3QKDLM0XTY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-3QKDLM0XTY');
+    </script>
   </head>
   <body>
     <div class="container-fluid bg-light mb-5">
